--- a/sass/_page.scss
+++ b/sass/_page.scss
@@ -12,6 +12,7 @@
 	background: $secondary;
 	height: 10px;
 	margin: -1.5rem -1.5rem 1.5rem -1.5rem;
+	transition: 0.5s ease;
 }
 
 .map h3 {
