--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -55,7 +55,7 @@ $categories: (
 /* Dimensions */
 $nav-width-desktop: 300px;
 $nav-height-mobile: 100px;
+$top-nav-height-desktop: 350px;
+$top-nav-height-mobile: 55px;
 $wp-admin-nav-height-desktop: 32px;
 $wp-admin-nav-height-mobile: 46px;
-$logo-height-desktop: 350px;
-$header-height: 55px;
